fix for lists not showing in tabs

--- a/assets/styles/components/_tabs-to-accordion.scss
+++ b/assets/styles/components/_tabs-to-accordion.scss
@@ -61,6 +61,13 @@ ul.tabs li.active {
   .tab-content-caption-block {
     @extend .cf;
     width: 100%;
+    ul li {
+      padding-left: 9px;
+      margin-left: 16px;
+      list-style-type: square;
+    }
+  
+
   }
   .tab_drawer_heading {
     margin: 0;
